0.9.0.dev0/_sources/gettingstarted/examples/gallery/auto_examples_processing/apodization/plot_proc_sp.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_processing/apodization/plot_proc_sp.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_apodization_plot_proc_sp.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_apodization_plot_proc_sp.py:


Sine bell and squared Sine bell window multiplication
=====================================================

In this example, we use sine bell or squared sine bell window multiplication to apodize a NMR signal in the time domain.

Requires the official ``spectrochempy-nmr`` plugin.
Install with: ``pip install spectrochempy[nmr]``.

.. GENERATED FROM PYTHON SOURCE LINES 20-25

.. code-block:: Python

    import spectrochempy as scp

    DATADIR = scp.preferences.datadir
    path = DATADIR / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_1d"








.. GENERATED FROM PYTHON SOURCE LINES 26-29

.. code-block:: Python

    dataset1D = scp.nmr.read_topspin(path, expno=1, remove_digital_filter=True)
    dataset1D





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/spectrochempy/spectrochempy/.venv/lib/python3.13/site-packages/spectrochempy/core/readers/importer.py:226: UserWarning: No module named 'spectrochempy_hypercomplex'
      warning_(str(e))




.. GENERATED FROM PYTHON SOURCE LINES 30-31

Normalize the dataset values and reduce the time domain

.. GENERATED FROM PYTHON SOURCE LINES 31-34

.. code-block:: Python

    dataset1D /= dataset1D.real.data.max()  # normalize
    dataset1D = dataset1D[0.0:15000.0]



.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "/home/runner/work/spectrochempy/spectrochempy/build/~gallery_examples/processing/apodization/plot_proc_sp.py", line 31, in <module>
        dataset1D /= dataset1D.real.data.max()  # normalize
                     ^^^^^^^^^^^^^^
    AttributeError: 'NoneType' object has no attribute 'real'




.. GENERATED FROM PYTHON SOURCE LINES 35-36

Apply Sine bell window apodization with parameter ssb=2, which correspond to a cosine function

.. GENERATED FROM PYTHON SOURCE LINES 36-38

.. code-block:: Python

    new1, curve1 = scp.sinm(dataset1D, ssb=2, retapod=True, inplace=False)


.. GENERATED FROM PYTHON SOURCE LINES 39-40

this is equivalent to

.. GENERATED FROM PYTHON SOURCE LINES 40-42

.. code-block:: Python

    new1, curve1 = dataset1D.sinm(ssb=2, retapod=True, inplace=False)


.. GENERATED FROM PYTHON SOURCE LINES 43-44

or also

.. GENERATED FROM PYTHON SOURCE LINES 44-46

.. code-block:: Python

    new1, curve1 = scp.sp(dataset1D, ssb=2, pow=1, retapod=True, inplace=False)


.. GENERATED FROM PYTHON SOURCE LINES 47-48

Apply Sine bell window apodization with parameter ssb=2, which correspond to a sine function

.. GENERATED FROM PYTHON SOURCE LINES 48-50

.. code-block:: Python

    new2, curve2 = dataset1D.sinm(ssb=1, retapod=True, inplace=False)


.. GENERATED FROM PYTHON SOURCE LINES 51-52

Apply Squared Sine bell window apodization with parameter ssb=1 and ssb=2

.. GENERATED FROM PYTHON SOURCE LINES 52-55

.. code-block:: Python

    new3, curve3 = scp.qsin(dataset1D, ssb=2, retapod=True, inplace=False)
    new4, curve4 = dataset1D.qsin(ssb=1, retapod=True, inplace=False)


.. GENERATED FROM PYTHON SOURCE LINES 56-57

Apply shifted Sine bell window apodization with parameter ssb=8 (mixed sine/cosine window)

.. GENERATED FROM PYTHON SOURCE LINES 57-59

.. code-block:: Python

    new5, curve5 = dataset1D.sinm(ssb=8, retapod=True, inplace=False)


.. GENERATED FROM PYTHON SOURCE LINES 60-61

Plotting

.. GENERATED FROM PYTHON SOURCE LINES 61-84

.. code-block:: Python

    dataset1D.plot(zlim=(-2, 2), color="k")
    curve1.plot(color="r", clear=False)
    new1.plot(
        data_only=True, color="r", clear=False, label=" sinm with ssb= 2 (cosine window)"
    )
    curve2.plot(color="b", clear=False)
    new2.plot(
        data_only=True, color="b", clear=False, label=" sinm with ssb= 1 (sine window)"
    )
    curve3.plot(color="m", clear=False)
    new3.plot(data_only=True, color="m", clear=False, label=" qsin with ssb= 2")
    curve4.plot(color="g", clear=False)
    new4.plot(data_only=True, color="g", clear=False, label=" qsin with ssb= 1")
    curve5.plot(color="c", ls="--", clear=False)
    new5.plot(
        data_only=True,
        color="c",
        ls="--",
        clear=False,
        label=" sinm with ssb= 8",
        legend="best",
    )


.. GENERATED FROM PYTHON SOURCE LINES 85-89

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python
scp.show()
sphinx_gallery_thumbnail_number = -1


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.012 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_apodization_plot_proc_sp.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_proc_sp.ipynb <plot_proc_sp.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_proc_sp.py <plot_proc_sp.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_proc_sp.zip <plot_proc_sp.zip>`
